Updated projects to .Net Core 3.1
